# jaka_dual_arm

./: README.md  package.xml  setup.cfg  setup.py
config/: dual_arm.rviz  dual_arm.srdf  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
docs/: MANUAL.md  SAFETY.md
jaka_dual_arm/: coordinator.py  jaka_action_server.py  joint_state_bridge.py
launch/: coordinator.launch.py  dual_arm.launch.py  dual_arm_display.launch.py  dual_arm_moveit.launch.py  dual_arm_moveit.launch_1.py  dual_arm_real.launch.py
urdf/: dual_arm.urdf.xacro
